# ZM_team

./: Profile.db  README.md  pyproject.toml
test_task/database/: Profile.db  init_db.py
