[tool.poetry]
name = "zm_team"
version = "0.1.0"
description = ""
authors = ["Valerii-Denisov <klerk919191@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
peewee = "^3.16.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.17.0"
flake8 = "4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
